cloudformation.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Single instance",
    "Metadata": {},
    "Parameters": {},
    "Mappings": {},
    "Conditions": {},
    "Resources": {
        "Web1": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "ImageId": "ami-9d15c7f3",
                "InstanceType": "t2.micro",
                "SecurityGroups": [
                    {
                        "Ref": "WebSecurityGroup"
                    }
                ],
                "KeyName": "aws-cloudformation",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Value"
                    }
                ]
            }
        },
        "WebSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Enable HTTP and SSH access",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        }
    },
    "Outputs": {}
}
